<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:divider="@drawable/divider_vertical_white"
    android:dividerPadding="0dp"
    android:orientation="horizontal"
    android:padding="0dp"
    android:showDividers="middle">

    <Button
        android:id="@+id/footer_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_footer_button_square"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"
        android:drawableTop="@drawable/baseline_list_24"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:text="@string/schedule_list"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/footer_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_footer_button_square"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"
        android:drawableTop="@drawable/outline_add_circle_24"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:text="@string/add_schedule"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/footer_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_footer_button_square"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"
        android:drawableTop="@drawable/outline_history_24"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:text="@string/history"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/footer_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_footer_button_square"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"
        android:drawableTop="@drawable/baseline_settings_24"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:text="@string/settings"
        android:textColor="@color/white" />

</LinearLayout>
